<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg5"
    android:id="@+id/reg_element"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/regLayoutHeader"
        android:layout_width="417dp"
        android:layout_height="55dp"
        android:background="#00dbc6"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <Button
        android:id="@+id/regSigninButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:text="SI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/regTextViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:textColor="#fff"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="@+id/regLayoutHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regLayoutHeader" />

    <EditText
        android:textColor="@color/et_color"
        android:id="@+id/regEditTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regLayoutHeader" />

    <EditText
        android:textColor="@color/et_color"
        android:id="@+id/regEditTextSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEditTextName" />

    <EditText
        android:id="@+id/regEditTextEmail"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:textColor="@color/et_color"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEditTextSurname" />

    <EditText
        android:textColor="@color/et_color"
        android:id="@+id/regEditTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEditTextEmail" />

    <EditText
        android:textColor="@color/et_color"
        android:id="@+id/regEditTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEditTextUsername" />

    <TextView
        android:textColor="@color/et_color"
        android:id="@+id/regTextViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@+id/regEditTextName"
        app:layout_constraintEnd_toStartOf="@+id/regEditTextName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regEditTextName" />

    <TextView
        android:textColor="@color/et_color"
        android:id="@+id/regTextViewSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        app:layout_constraintBottom_toBottomOf="@+id/regEditTextSurname"
        app:layout_constraintEnd_toStartOf="@+id/regEditTextSurname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regEditTextSurname" />

    <TextView
        android:textColor="@color/et_color"
        android:id="@+id/regTextNewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintBottom_toBottomOf="@+id/regEditTextEmail"
        app:layout_constraintEnd_toStartOf="@+id/regEditTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regEditTextEmail" />

    <TextView
        android:textColor="@color/et_color"
        android:id="@+id/regTextViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/regEditTextUsername"
        app:layout_constraintEnd_toStartOf="@+id/regEditTextUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regEditTextUsername" />

    <TextView
        android:textColor="@color/et_color"
        android:id="@+id/regTextViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintBottom_toBottomOf="@+id/regEditTextPassword"
        app:layout_constraintEnd_toStartOf="@+id/regEditTextPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regEditTextPassword" />

    <Button
        android:id="@+id/regRegistrationButton"
        style="@style/Widget.AppCompat.Button.Colored"

        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"


        app:layout_constraintTop_toBottomOf="@+id/regEditTextPassword" />

    <TextView
        android:id="@+id/regTextViewErrorMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regRegistrationButton"
        app:layout_constraintVertical_bias="0.579" />

</androidx.constraintlayout.widget.ConstraintLayout>