<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".AccountActivity" >

    <LinearLayout
        android:id="@+id/accLayoutHeader"
        android:layout_width="417dp"
        android:layout_height="55dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </LinearLayout>

    <TextView
        android:id="@+id/accTextViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="\@"
        android:textColor="#fff"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="@+id/accLayoutHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/accLayoutHeader" />

    <TextView
        android:id="@+id/accTextViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:text="@string/name"
        android:textColor="@color/interfaces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accLayoutHeader" />

    <TextView
        android:id="@+id/accTextViewSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/surname"
        android:textColor="@color/interfaces"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accTextViewName" />

    <Button

        android:id="@+id/editNameButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"

        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="@+id/accTextViewName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/accTextViewName"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/editSurnameButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_weight="1"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="@+id/accTextViewSurname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/accTextViewSurname"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="90pt"
        android:text="@string/change_password"
        android:background="@color/colorPrimary"
        style="@style/Widget.AppCompat.Button.Colored"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accTextViewSurname" />

    <Button
        android:id="@+id/checkCoursesButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="356dp"
        android:background="#F00"
        android:text="Check Courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accTextViewSurname" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:text="Delete account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordButton" />


</androidx.constraintlayout.widget.ConstraintLayout>